--- a/index.html
+++ b/index.html
@@ -1,29 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="assests/stylesheets/normalize.css">
     <meta charset="utf-8">
     <title> Styles Conference </title>
   </head>
+
   <body>
+
     <header>
-      <h1>Styles Conference</h1>
+
+      <h1>
+        <a href="index.html">Styles Conference</a>
+      </h1>
+
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="venue.html">Venue</a>
+        <a href="register.html">Register</a>
+      </nav>
+
     </header>
+
     <section>
       <h3>Dedicated to the craft of building websites</h3>
       <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
+      <a href="register.html">Register Now</a>
     </section>
+
     <section>
-      <section>
+      <a href="speakers.html">
         <h5>Speakers</h5>
         <h3>World-Class Speakers</h3>
-        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-      </section>
+      </a>
+      <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
     </section>
+
+    <section>
+      <a href="schedule.html">
+        <h5>Schedule</h5>
+        <h3>Three Inspiring Days</h3>
+      </a>
+      <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+    </section>
+
+    <section>
+      <a href="venue.html">
+        <h5>Venue</h5>
+        <h3>The Chicago Theatre</h3>
+      </a>
+      <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+    </section>
+
+  </section>
+
     <footer>
+
       <small>&copy; Styles Conference</small>
       <small><a href="mailto:murali.aravind94@gmail?subject=Reaching%20Out&body=How%20are%20you">Email Me</a></small>
+
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="speakers.html">Speakers</a>
+        <a href="schedule.html">Schedule</a>
+        <a href="venue.html">Venue</a>
+        <a href="register.html">Register</a>
+      </nav>
+
     </footer>
+    
   </body>
 </html>
