--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 
   <head>
     <link rel="stylesheet" href="assests/stylesheets/normalize.css">
+    <link rel="stylesheet" href="assests/stylesheets/main.css">
     <meta charset="utf-8">
     <title> Styles Conference </title>
   </head>
 
   <body>
 
-    <header>
+    <header class="container">
 
-      <h1>
-        <a href="index.html">Styles Conference</a>
-      </h1>
-
-      <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+      <section class="container">
+        <h1>
+          <a href="index.html">Styles Conference</a>
+        </h1>
+      </section>
+        <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav>
         <a href="index.html">Home</a>
@@ -27,13 +29,13 @@
 
     </header>
 
-    <section>
+    <section class="container">
       <h3>Dedicated to the craft of building websites</h3>
       <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
       <a href="register.html">Register Now</a>
     </section>
 
-    <section>
+    <section class="container">
       <a href="speakers.html">
         <h5>Speakers</h5>
         <h3>World-Class Speakers</h3>
@@ -41,7 +43,7 @@
       <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
     </section>
 
-    <section>
+    <section class="container">
       <a href="schedule.html">
         <h5>Schedule</h5>
         <h3>Three Inspiring Days</h3>
@@ -49,7 +51,7 @@
       <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
     </section>
 
-    <section>
+    <section class="container">
       <a href="venue.html">
         <h5>Venue</h5>
         <h3>The Chicago Theatre</h3>
@@ -59,7 +61,7 @@
 
   </section>
 
-    <footer>
+    <footer class="container">
 
       <small>&copy; Styles Conference</small>
       <small><a href="mailto:murali.aravind94@gmail?subject=Reaching%20Out&body=How%20are%20you">Email Me</a></small>
@@ -73,6 +75,6 @@
       </nav>
 
     </footer>
-    
+
   </body>
 </html>
