--- a/schedule.html
+++ b/schedule.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+  <head class="container">
     <link rel="stylesheet" href="assests/stylesheets/normalize.css">
+    <link rel="stylesheet" href="assests/stylesheets/main.css">
     <meta charset="utf-8">
     <title> Styles Conference </title>
   </head>
 
   <body>
 
-    <header>
+    <header class="container">
 
-      <h1>
-        <a href="index.html">Styles Conference</a>
-      </h1>
+      <section class="container">
+        <h1>
+          <a href="index.html">Styles Conference</a>
+        </h1>
+      </section>
 
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 
@@ -29,7 +32,7 @@
 
     <h1>schedule</h1>
 
-    <footer>
+    <footer class="container">
 
       <small>&copy; Styles Conference</small>
       <small><a href="mailto:murali.aravind94@gmail?subject=Reaching%20Out&body=How%20are%20you">Email Me</a></small>
