Add Button to index.html Add btn class and btn-alt class to main.css Set section to <h1> all .html pages

--- a/register.html
+++ b/register.html
@@ -30,7 +30,11 @@
 
     </header>
 
-    <h1>Register</h1>
+    <section class="container">
+
+      <h1>Register</h1>
+      
+    </section>
 
     <footer class="container">
 
