--- a/schedule.html
+++ b/schedule.html
@@ -30,8 +30,12 @@
 
     </header>
 
-    <h1>schedule</h1>
+    <section class="container">
 
+      <h1>schedule</h1>
+
+    </section>
+    
     <footer class="container">
 
       <small>&copy; Styles Conference</small>
