--- a/venue.html
+++ b/venue.html
@@ -30,7 +30,11 @@
 
     </header>
 
-    <h1>Venue</h1>
+    <section class="container">
+
+      <h1>Venue</h1>
+
+    </section>
 
     <footer class="container">
 
