--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     </header>
 
-    <section class="container">
+    <section class="hero container">
       <h3>Dedicated to the craft of building websites</h3>
       <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-      <a href="register.html">Register Now</a>
+      <a class="btn btn-alt" href="register.html">Register Now</a>
     </section>
 
     <section class="container">
