--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 
   <body>
 
-    <header class="container">
+    <header class="container group">
 
       <section class="container">
-        <h1>
-          <a href="index.html">Styles Conference</a>
+
+        <h1 class="logo">
+          <a href="index.html">Styles <br> Conference</a>
         </h1>
+
       </section>
+
         <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav>
@@ -30,38 +33,44 @@
     </header>
 
     <section class="hero container">
+
       <h3>Dedicated to the craft of building websites</h3>
       <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
       <a class="btn btn-alt" href="register.html">Register Now</a>
+
     </section>
 
     <section class="container">
+
       <a href="speakers.html">
         <h5>Speakers</h5>
         <h3>World-Class Speakers</h3>
       </a>
       <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+
     </section>
 
     <section class="container">
+
       <a href="schedule.html">
         <h5>Schedule</h5>
         <h3>Three Inspiring Days</h3>
       </a>
       <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+
     </section>
 
     <section class="container">
+
       <a href="venue.html">
         <h5>Venue</h5>
         <h3>The Chicago Theatre</h3>
       </a>
       <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+
     </section>
 
-  </section>
-
-    <footer class="container">
+    <footer class="primary-footer container group">
 
       <small>&copy; Styles Conference</small>
       <small><a href="mailto:murali.aravind94@gmail?subject=Reaching%20Out&body=How%20are%20you">Email Me</a></small>
