--- a/venue.html
+++ b/venue.html
@@ -10,12 +10,14 @@
 
   <body>
 
-    <header class="container">
+    <header class="container group">
 
       <section class="container">
-        <h1>
-          <a href="index.html">Styles Conference</a>
+
+        <h1 class="logo">
+          <a href="index.html">Styles <br> Conference</a>
         </h1>
+
       </section>
 
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
@@ -36,7 +38,7 @@
 
     </section>
 
-    <footer class="container">
+    <footer class="primary-footer container group">
 
       <small>&copy; Styles Conference</small>
       <small><a href="mailto:murali.aravind94@gmail?subject=Reaching%20Out&body=How%20are%20you">Email Me</a></small>
