--- a/index.html
+++ b/index.html
@@ -40,35 +40,44 @@
 
     </section>
 
-    <section class="container">
+    <section class="grid">
 
-      <a href="speakers.html">
-        <h5>Speakers</h5>
-        <h3>World-Class Speakers</h3>
-      </a>
-      <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+      <!-- Speakers -->
+      <section class="col-1-3">
 
-    </section>
+        <a href="speakers.html">
+          <h5>Speakers</h5>
+          <h3>World-Class Speakers</h3>
+        </a>
+        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
 
-    <section class="container">
+      </section><!--
 
-      <a href="schedule.html">
-        <h5>Schedule</h5>
-        <h3>Three Inspiring Days</h3>
-      </a>
-      <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+        Schedule
 
-    </section>
 
-    <section class="container">
+      --><section class="col-1-3">
 
-      <a href="venue.html">
-        <h5>Venue</h5>
-        <h3>The Chicago Theatre</h3>
-      </a>
-      <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+        <a href="Schedule.html">
+          <h5>Schedule</h5>
+          <h3>Three Inspiring Days</h3>
+        </a>
+        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
 
-    </section>
+      </section><!--
+
+        Venue
+
+      --><section class="col-1-3">
+
+        <a href="venue.html">
+          <h5>Venue</h5>
+          <h3>The Chicago Theatre</h3>
+        </a>
+        <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+
+      </section>
+  </section>
 
     <footer class="primary-footer container group">
 
