--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
       </section>
 
-        <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+        <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-      <nav>
+      <nav class="primary-nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
@@ -43,7 +43,7 @@
     <section class="grid">
 
       <!-- Speakers -->
-      <section class="col-1-3">
+      <section class="teaser col-1-3">
 
         <a href="speakers.html">
           <h5>Speakers</h5>
@@ -56,7 +56,7 @@
         Schedule
 
 
-      --><section class="col-1-3">
+      --><section class="teaser col-1-3">
 
         <a href="Schedule.html">
           <h5>Schedule</h5>
@@ -68,7 +68,7 @@
 
         Venue
 
-      --><section class="col-1-3">
+      --><section class="teaser col-1-3">
 
         <a href="venue.html">
           <h5>Venue</h5>
