--- a/schedule.html
+++ b/schedule.html
@@ -4,6 +4,7 @@
   <head class="container">
     <link rel="stylesheet" href="assests/stylesheets/normalize.css">
     <link rel="stylesheet" href="assests/stylesheets/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <title> Styles Conference </title>
   </head>
@@ -22,7 +23,7 @@
 
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-      <nav class="primary-nav">
+      <nav class="nav primary-nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
@@ -43,7 +44,7 @@
       <small>&copy; Styles Conference</small>
       <small><a href="mailto:murali.aravind94@gmail?subject=Reaching%20Out&body=How%20are%20you">Email Me</a></small>
 
-      <nav>
+      <nav class="nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
