--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
 
-    <header class="container group">
+    <header class="primary-header container group">
 
       <section class="container">
 
@@ -41,43 +41,45 @@
 
     </section>
 
-    <section class="grid">
+    <section class="row">
+      <div class="grid">
 
-      <!-- Speakers -->
-      <section class="teaser col-1-3">
+        <!-- Speakers -->
+        <section class="teaser col-1-3">
 
-        <a href="speakers.html">
-          <h5>Speakers</h5>
-          <h3>World-Class Speakers</h3>
-        </a>
-        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+          <a href="speakers.html">
+            <h5>Speakers</h5>
+            <h3>World-Class Speakers</h3>
+          </a>
+          <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
 
-      </section><!--
+        </section><!--
 
-        Schedule
+          Schedule
 
 
-      --><section class="teaser col-1-3">
+        --><section class="teaser col-1-3">
 
-        <a href="Schedule.html">
-          <h5>Schedule</h5>
-          <h3>Three Inspiring Days</h3>
-        </a>
-        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+          <a href="Schedule.html">
+            <h5>Schedule</h5>
+            <h3>Three Inspiring Days</h3>
+          </a>
+          <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
 
-      </section><!--
+        </section><!--
 
-        Venue
+          Venue
 
-      --><section class="teaser col-1-3">
+        --><section class="teaser col-1-3">
 
-        <a href="venue.html">
-          <h5>Venue</h5>
-          <h3>The Chicago Theatre</h3>
-        </a>
-        <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+          <a href="venue.html">
+            <h5>Venue</h5>
+            <h3>The Chicago Theatre</h3>
+          </a>
+          <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
 
-      </section>
+        </section>
+    </div>
   </section>
 
     <footer class="primary-footer container group">
