--- a/venue.html
+++ b/venue.html
@@ -11,7 +11,7 @@
 
   <body>
 
-    <header class="container group">
+    <header class="primary-header container group">
 
       <section class="container">
 
@@ -33,10 +33,14 @@
 
     </header>
 
-    <section class="container">
+    <section class="row-alt">
+      <div class="lead container">
 
-      <h1>Venue</h1>
+        <h1>Venue</h1>
 
+        <p> We&#8217;re happy to welcome over twenty speakers to present on the industry&#8217;s latest technologies. Prepare for an inspiration extravaganza.</p>
+
+      </div>
     </section>
 
     <footer class="primary-footer container group">
