--- a/schedule.html
+++ b/schedule.html
@@ -24,12 +24,14 @@
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav class="nav primary-nav">
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
-      </nav>
+        <ul>
+          <li><a href="index.html">Home</a></li><!--
+          --><li><a href="speakers.html">Speakers</a></li><!--
+          --><li><a href="schedule.html">Schedule</a></li><!--
+          --><li><a href="venue.html">Venue</a></li><!--
+          --><li><a href="register.html">Register</a></li>
+      </ul>
+    </nav>
 
     </header>
 
@@ -49,12 +51,14 @@
       <small><a href="mailto:murali.aravind94@gmail?subject=Reaching%20Out&body=How%20are%20you">Email Me</a></small>
 
       <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
-      </nav>
+        <ul>
+          <li><a href="index.html">Home</a></li><!--
+          --><li><a href="speakers.html">Speakers</a></li><!--
+          --><li><a href="schedule.html">Schedule</a></li><!--
+          --><li><a href="venue.html">Venue</a></li><!--
+          --><li><a href="register.html">Register</a></li>
+      </ul>
+    </nav>
 
     </footer>
 
