--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
         <!-- Speakers -->
         <section class="teaser col-1-3">
 
+          <h5>Speakers</h5>
           <a href="speakers.html">
-            <h5>Speakers</h5>
-            <h3>World-Class Speakers</h3>
+              <img src="assests/images/home/speakers.jpg" alt="Professional Speaker">
+              <h3>World-Class Speakers</h3>
           </a>
           <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
 
@@ -61,9 +62,10 @@
 
 
         --><section class="teaser col-1-3">
-
+          <h5>Schedule</h5>
           <a href="Schedule.html">
-            <h5>Schedule</h5>
+
+            <img src="assests/images/home/schedule.jpg" alt="Schedule info">
             <h3>Three Inspiring Days</h3>
           </a>
           <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
@@ -74,8 +76,9 @@
 
         --><section class="teaser col-1-3">
 
+          <h5>Venue</h5>
           <a href="venue.html">
-            <h5>Venue</h5>
+            <img src="assests/images/home/venue.jpg" alt="Venue Area">
             <h3>The Chicago Theatre</h3>
           </a>
           <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
