Add two venues Add respective iframes to venue Add 2 coloumn grid structure

--- a/venue.html
+++ b/venue.html
@@ -45,6 +45,39 @@
       </div>
     </section>
 
+    <section class="row">
+      <div class="grid">
+
+        <section class="venue-theatre">
+
+          <div class="col-1-3">
+
+            <h2>Chicago Theatre</h2>
+            <p>175 N State St <br> Chicago, IL 60601</p>
+            <p><a href="http://www.thechicagotheatre.com/">thechicagotheatre.com</a> <br> (312) 462-6300</p>
+
+          </div><!--
+
+          --><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2970.3429896480984!2d-87.62976048406212!3d41.88548017922163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2ca55810a493%3A0x4700ddf60fcbfad6!2sThe+Chicago+Theatre!5e0!3m2!1sen!2sin!4v1468993935837" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+        </section>
+
+        <section class="venue-office">
+
+          <div class="col-1-3">
+
+            <h3>Multunus</h3>
+            <p>1316/A, Phase 2, J P Nagar <br> Bengaluru ,560078</p>
+            <p><a href="http://www.multunus.com/">Multunus.com</a> <br> (91) 80 6570 2964 </p>
+
+          </div><!--
+          --><iframe class="venue-map col-2-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.956858185826!2d77.58673191547145!3d12.910494390896018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae150d8a6e03b1%3A0xc88ebcfe41394a8a!2sMultunus+Software+Pvt+Ltd!5e0!3m2!1sen!2sin!4v1468994397808" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+        </section>
+
+      </div>
+    </section>
+
     <footer class="primary-footer container group">
 
       <small>&copy; Styles Conference</small>
