--- a/venue.html
+++ b/venue.html
@@ -81,7 +81,7 @@
     <footer class="primary-footer container group">
 
       <small>&copy; Styles Conference</small>
-      <small><a href="mailto:murali.aravind94@gmail?subject=Reaching%20Out&body=How%20are%20you">Email Me</a></small>
+      <small class="email"><a href="mailto:murali.aravind94@gmail?subject=Reaching%20Out&body=How%20are%20you">Email Me</a></small>
 
       <nav class="nav">
         <ul>
